platform/external-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: app-svc
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: console-svc
spec:
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: console
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-svc
              port:
                number: 8080
        - path: /console
          pathType: Prefix
          backend:
            service:
              name: console-svc
              port:
                number: 8082
